--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<nav>
 							<ul>
 								<li><a href="index123.html" target="_blank" class="fa fa-file-o" title="Website"></a></li>
+								<li><a href="http://weibo.com/yuantravel" target="_blank" class="fa fa-weibo" title="Weibo"></a></li>
 								<li><a href="https://www.facebook.com/ydy717" target="_blank" class="fa fa-facebook" title="Facebook"></a></li>
 								<li><a href="https://www.linkedin.com/in/deyuanyang" target="_blank" class="fa fa-linkedin" title="Linkedin"></a></li>
 								<li><a href="mailto:ydy717@gmail.com" class="fa fa-envelope-o" title="Email"></a></li>
