--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<p>Undergraduate &nbsp;&bull;&nbsp; Tsinghua University &nbsp;&bull;&nbsp; Beijing</p>
 						<nav>
 							<ul>
-								<li><a href="http://yangdeyuan.xyz" target="_blank" class="fa fa-file-o" title="Website"></a></li>
+								<li><a href="http://yangdeyuan.com" target="_blank" class="fa fa-file-o" title="Website"></a></li>
 								<li><a href="http://weibo.com/yuantravel" target="_blank" class="fa fa-weibo" title="Weibo"></a></li>
 								<li><a href="https://www.facebook.com/ydy717" target="_blank" class="fa fa-facebook" title="Facebook"></a></li>
 								<li><a href="https://www.linkedin.com/in/deyuanyang" target="_blank" class="fa fa-linkedin" title="Linkedin"></a></li>
