--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE HTML>
 <html>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?42bd6088bec917be79a2d157773920e3";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 	<head>
 		<title>Deyuan YANG Personal Website</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
