--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ var _hmt = _hmt || [];
 						<h1>Deyuan YANG</h1>
 						<p>Undergraduate &nbsp;&bull;&nbsp; Tsinghua University &nbsp;&bull;&nbsp; Beijing</p>
 						<nav>
-							<ul>#
+							<ul>
 								<li><a href="http://yangdeyuan.com" target="_blank" class="fa fa-file-o" title="Website"></a></li>
-								<li><a href="http://weibo.com/yuantravel" target="_blank" class="fa fa-weibo" title="Weibo"></a></li>#
+								<li><a href="http://weibo.com/yuantravel" target="_blank" class="fa fa-weibo" title="Weibo"></a></li>
 								<li><a href="https://www.linkedin.com/in/deyuanyang" target="_blank" class="fa fa-linkedin" title="Linkedin"></a></li>
 								<li><a href="https://www.facebook.com/ydy717" target="_blank" class="fa fa-facebook" title="Facebook"></a></li>
 								<li><a href="mailto:ydy717@gmail.com" class="fa fa-envelope-o" title="Email"></a></li>
